# gdr

./: .cnb.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  gdr.py  pyproject.toml
ci/: Dockerfile  lint.yml  validate-podman.sh
ci/rt-thread/: build-rtt.sh  run-qemu-matrix.sh
ci/rt-thread/patches/: 004-newlib-sdidinit.patch  005-scons-deque-list.patch
ci/rt-thread/patches/4.0.0-4.0.1/: 008-finsh-varargs-compat.patch  009-newlib-posix-compat.patch
ci/rt-thread/patches/4.0.2/: 005-disable-signals.patch  006-rtlibc-signal-compat.patch
ci/rt-thread/patches/4.0.3/: 003-warn-fix.patch
ci/rt-thread/patches/4.0.4-4.0.5/: 003-warn-fix.patch
ci/rt-thread/patches/4.1.x/: 001-test-fixture-main.patch  002-disable-pthreads.patch
ci/rt-thread/patches/cortex-a9/4.0.0-4.0.1/: 001-test-fixture-main.patch  002-disable-pthreads.patch  005-disable-signals.patch  010-automac-python3-compat.patch  011-v4.0.0-newlib-posix-compat.patch
ci/rt-thread/patches/cortex-a9/4.0.2/: 002-disable-pthreads.patch  007-newlib-select-compat.patch  009-newlib-posix-compat.patch
ci/rt-thread/patches/cortex-a9/4.0.3/: 001-test-fixture-main.patch  004-scons-deque-list.patch  006-rtlibc-signal-compat.patch
ci/rt-thread/patches/cortex-a9/4.0.4-4.0.5/: 002-disable-pthreads.patch
ci/rt-thread/patches/cortex-a9/4.1.x/: 003-warn-fix.patch  004-scons-deque-list.patch  005-newlib-sdidinit.patch
ci/rt-thread/patches/rv64/4.0.4-4.0.5/: 001-test-fixture-main.patch  004-newlib-sdidinit.patch
docs/: architecture.md
gdr/: __init__.py  abstractions.py  gdb_bridge.py  kernel.py  layout.py  printers.py
rtthread/: __init__.py  adapter.py  commands.py  layout.py  navigation.py  version.py
tests/: __init__.py  conftest.py  test_abstractions.py  test_commands.py  test_core_boundary.py  test_entrypoint.py  test_functions.py  test_gdb_bridge.py  test_layout.py  test_printers.py  test_registration.py  test_rtthread_layout.py  test_rtthread_navigation.py
tests/fixtures/: .gitkeep
(+1 files in other folders)
